[gd_scene load_steps=14 format=1]

[ext_resource path="res://start.gd" type="Script" id=1]
[ext_resource path="res://plane.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/title-01.png" type="Texture" id=3]
[ext_resource path="res://ui/quit-button-01.png" type="Texture" id=4]
[ext_resource path="res://ui/quit-button-03.png" type="Texture" id=5]
[ext_resource path="res://ui/quit-button-02.png" type="Texture" id=6]
[ext_resource path="res://ui/play-button-01.png" type="Texture" id=7]
[ext_resource path="res://ui/play-button-03.png" type="Texture" id=8]
[ext_resource path="res://ui/play-button-02.png" type="Texture" id=9]
[ext_resource path="res://fonts/main-text.fnt" type="BitmapFont" id=10]
[ext_resource path="res://plane/smoke.png" type="Texture" id=11]

[sub_resource type="Animation" id=1]

resource/name = "New Anim"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/playButton:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 226, 267 ), Vector2( 226, 271 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/quitButton:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.2, 0.7 ),
"transitions": FloatArray( -1.51572, -1.56917 ),
"update": 0,
"values": [ Vector2( 339, 266 ), Vector2( 339, 271 ) ]
}

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 9.91408, 10 )

[node name="game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="player" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( -83, 147 )
MAX_FUEL = 20
fuel = 0
be_quiet = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/New Anim" = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "New Anim"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="title-01" type="Sprite" parent="CanvasLayer"]

transform/pos = Vector2( 319, 118 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="quitButton" type="TextureButton" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 339.0
margin/top = 267.761
margin/right = 433.0
margin/bottom = 306.761
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 5 )
textures/hover = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="playButton" type="TextureButton" parent="CanvasLayer"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 94.0
margin/top = -87.0
margin/right = -19.0
margin/bottom = -134.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )
textures/hover = ExtResource( 9 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 132.0
margin/top = 237.0
margin/right = 516.0
margin/bottom = 262.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "SPACE to start  /  F to toggle FULLSCREEN"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label2" type="Label" parent="CanvasLayer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 160.0
margin/top = 11.0
margin/right = 477.0
margin/bottom = 36.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.997894, 0.730469, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Created by John Watson (@yafd)"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label3" type="Label" parent="CanvasLayer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 253.0
margin/top = 323.0
margin/right = 399.0
margin/bottom = 348.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.996078, 0.729412, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "#LDJAM #LD39"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="aiTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[node name="playpen" type="Area2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 337, 191.5 )
transform/scale = Vector2( 11.5312, 6.98438 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 4.34229, 0, 0, 3.97591, -8.61705, -0.501121 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="playpen"]

transform/pos = Vector2( -8.61705, -0.501121 )
transform/scale = Vector2( 4.34229, 3.97591 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="overlay" type="Sprite" parent="."]

visibility/opacity = 0.39
transform/pos = Vector2( 386.748, 248.964 )
transform/scale = Vector2( 97.9496, 65.7928 )
z/z = 100
texture = ExtResource( 11 )

[connection signal="pressed" from="CanvasLayer/quitButton" to="." method="quit_game"]

[connection signal="pressed" from="CanvasLayer/playButton" to="." method="play_game"]

[connection signal="timeout" from="aiTimer" to="." method="choose_ai_action"]

[connection signal="body_exit" from="playpen" to="." method="reset_player"]


